// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert displays the provided message 1`] = `
<div
  className="c-alert c-alert--error"
  role="alert"
>
  test message
</div>
`;

exports[`Alert is styled based on type 1`] = `
<div
  className="c-alert c-alert--info"
  role="alert"
/>
`;

exports[`Alert renders without crashing 1`] = `
<div
  className="c-alert c-alert--error"
  role="alert"
/>
`;
